--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,7 @@ body {
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%; */
+  color: #567189;
 }
 
 @font-face {
